--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,14 @@ body {
   box-sizing: inherit;
 }
 
-/*.preloader {
+.preloader {
   position: absolute;
   left: 50%;
   top: 10%;
   transform: translate(-50%, -50%);
 }
-.preloader__content {
+
+/*.preloader__content {
   position: absolute;
   color: #F4511E;
   top: -20px;
