--- a/css/styles.css
+++ b/css/styles.css
@@ -39,14 +39,15 @@ body {
   transform: translate(-50%, -50%);
 }
 
-/*.preloader__content {
+.preloader__content {
   position: absolute;
   color: #F4511E;
   top: -20px;
   font-size: 1.2em;
   text-transform: uppercase;
 }
-.preloader__wheel {
+
+/*.preloader__wheel {
   width: 60px;
   height: 60px;
   background: #F4511E;
