--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
   right: 10px;
 }
 
-/*.preloader__wheel-wrapper:nth-child(2n):before {
+.preloader__wheel-wrapper:nth-child(2n):before {
   content: "";
   top: -15px;
   left: 2px;
@@ -74,7 +74,8 @@ body {
   transform: rotate(-51deg);
   z-index: 5;
 }
-.preloader__wheel-wrapper:nth-child(2n):after {
+
+/*.preloader__wheel-wrapper:nth-child(2n):after {
   content: "";
   position: absolute;
   width: 110px;
