--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,11 @@ body {
   display: none;
 }
 
-/*.preloader__wheel-wrapper:nth-child(1):before {
+.preloader__wheel-wrapper:nth-child(1):before {
   display: none;
 }
-.preloader__inner-wheel, .preloader__second-inner-whell {
+
+/*.preloader__inner-wheel, .preloader__second-inner-whell {
   width: 20px;
   height: 20px;
   background-color: #DD2C00;
