--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ body {
   display: none;
 }
 
-/*.preloader__inner-wheel, .preloader__second-inner-whell {
+.preloader__inner-wheel, .preloader__second-inner-whell {
   width: 20px;
   height: 20px;
   background-color: #DD2C00;
@@ -134,7 +134,8 @@ body {
   border-radius: 50%;
   z-index: 10;
 }
-.preloader__second-inner-whell {
+
+/*.preloader__second-inner-whell {
   width: 50px;
   height: 50px;
   left: 5px;
