--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ body {
   z-index: 10;
 }
 
-/*.preloader__second-inner-whell {
+.preloader__second-inner-whell {
   width: 50px;
   height: 50px;
   left: 5px;
@@ -144,7 +144,8 @@ body {
   border: 1px solid #DD2C00;
   z-index: 2;
 }
-.preloader .preloader__wheel-wrapper:nth-child(1) {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(1) {
   top: 70px;
 }
 .preloader .preloader__wheel-wrapper:nth-child(1) .preloader__content {
