--- a/css/styles.css
+++ b/css/styles.css
@@ -149,10 +149,11 @@ body {
   top: 70px;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(1) .preloader__content {
+.preloader .preloader__wheel-wrapper:nth-child(1) .preloader__content {
   animation: wheel_rotate 7s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(1) .preloader__wheel {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(1) .preloader__wheel {
   animation: _wheel_rotate 7s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(2) {
