--- a/css/styles.css
+++ b/css/styles.css
@@ -161,10 +161,11 @@ body {
   top: 140px;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__content {
+.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__content {
   animation: wheel_rotate 3.5s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__wheel {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__wheel {
   animation: _wheel_rotate 3.5s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(3) {
