--- a/css/styles.css
+++ b/css/styles.css
@@ -165,10 +165,11 @@ body {
   animation: wheel_rotate 3.5s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__wheel {
+.preloader .preloader__wheel-wrapper:nth-child(2) .preloader__wheel {
   animation: _wheel_rotate 3.5s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(3) {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(3) {
   top: 210px;
 }
 .preloader .preloader__wheel-wrapper:nth-child(3) .preloader__content {
