--- a/css/styles.css
+++ b/css/styles.css
@@ -173,10 +173,11 @@ body {
   top: 210px;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__content {
+.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__content {
   animation: wheel_rotate 2.3333333333s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__wheel {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__wheel {
   animation: _wheel_rotate 2.3333333333s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(4) {
