--- a/css/styles.css
+++ b/css/styles.css
@@ -177,10 +177,11 @@ body {
   animation: wheel_rotate 2.3333333333s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__wheel {
+.preloader .preloader__wheel-wrapper:nth-child(3) .preloader__wheel {
   animation: _wheel_rotate 2.3333333333s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(4) {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(4) {
   top: 280px;
 }
 .preloader .preloader__wheel-wrapper:nth-child(4) .preloader__content {
