--- a/css/styles.css
+++ b/css/styles.css
@@ -181,10 +181,11 @@ body {
   animation: _wheel_rotate 2.3333333333s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(4) {
+.preloader .preloader__wheel-wrapper:nth-child(4) {
   top: 280px;
 }
-.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__content {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__content {
   animation: wheel_rotate 1.75s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(4) .preloader__wheel {
