--- a/css/styles.css
+++ b/css/styles.css
@@ -185,10 +185,11 @@ body {
   top: 280px;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__content {
+.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__content {
   animation: wheel_rotate 1.75s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__wheel {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(4) .preloader__wheel {
   animation: _wheel_rotate 1.75s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(5) {
