--- a/css/styles.css
+++ b/css/styles.css
@@ -193,10 +193,11 @@ body {
   animation: _wheel_rotate 1.75s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(5) {
+.preloader .preloader__wheel-wrapper:nth-child(5) {
   top: 350px;
 }
-.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__content {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__content {
   animation: wheel_rotate 1.4s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(5) .preloader__wheel {
