--- a/css/styles.css
+++ b/css/styles.css
@@ -197,10 +197,11 @@ body {
   top: 350px;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__content {
+.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__content {
   animation: wheel_rotate 1.4s linear infinite;
 }
-.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__wheel {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(5) .preloader__wheel {
   animation: _wheel_rotate 1.4s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(6) {
