--- a/css/styles.css
+++ b/css/styles.css
@@ -205,10 +205,11 @@ body {
   animation: _wheel_rotate 1.4s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(6) {
+.preloader .preloader__wheel-wrapper:nth-child(6) {
   top: 420px;
 }
-.preloader .preloader__wheel-wrapper:nth-child(6) .preloader__content {
+
+/*.preloader .preloader__wheel-wrapper:nth-child(6) .preloader__content {
   animation: wheel_rotate 1.1666666667s linear infinite;
 }
 .preloader .preloader__wheel-wrapper:nth-child(6) .preloader__wheel {
