--- a/css/styles.css
+++ b/css/styles.css
@@ -225,10 +225,11 @@ body {
   animation: wheel_rotate 1s linear infinite;
 }
 
-/*.preloader .preloader__wheel-wrapper:nth-child(7) .preloader__wheel {
+.preloader .preloader__wheel-wrapper:nth-child(7) .preloader__wheel {
   animation: _wheel_rotate 1s linear infinite;
 }
-@keyframes wheel_rotate {
+
+/*@keyframes wheel_rotate {
   0% {
     transform: rotate(0);
   }
