--- a/css/styles.css
+++ b/css/styles.css
@@ -243,19 +243,21 @@ body {
   }
 }
 
-/*@keyframes _wheel_rotate {
+@keyframes _wheel_rotate {
   0% {
     transform: rotate(360deg);
   }
+
   80% {
     transform: rotate(15deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
